--- a/Lab05.html
+++ b/Lab05.html
@@ -45,8 +45,7 @@
             <img src="images/icon_mail.png" alt="">
             <img src="images/icon_map.png" alt="">
             <img src="images/icon_up.png" alt="">
-            <img src="images/icon_down.png" alt="">
-        </div>
+            <img src="images/icon_down.png" alt="">        </div>
     </div>
     <div class="col-xl-auto container">
         <div class="card-body">
@@ -102,7 +101,7 @@
 </div>
 <footer>
     <nav class="collapse navbar-collapse navbar navbar-expand-md row">
-        <ul class="collapse navbar-collapse navbar-nav justify-content-end nav-fill col-md-8 offset-md-21">
+        <ul class="collapse navbar-collapse navbar-nav justify-content-center nav-fill col-md-8 offset-md-2">
             <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
             </li>
