--- a/Upload.html
+++ b/Upload.html
@@ -52,7 +52,7 @@
     </select>
     <br>
     <label>Country</label>
-    <select name="country" class="form-control">
+    <select name="country" class="form-select">
         <option>Choose country</option>
         <option>Canada</option>
         <option>Mexico</option>
@@ -60,7 +60,7 @@
     </select>
     <br>
     <label>City</label>
-    <input type="text" name="city" list="cities" class="form-control">
+    <input type="text" name="city" list="cities" class="form-select">
     <datalist id="cities">
         <option>Calgary</option>
         <option>Montreal</option>
